# appvm-manager-daemon

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/appvm-manager/common/helpers/: CommonTypes.hpp  Signals.hpp
common/include/appvm-manager/common/protocol/: IProtocol.hpp  ProtobufClientProtocol.hpp  Protocol.proto
common/include/appvm-manager/common/transport/: ITransport.hpp  TcpClientTransport.hpp  TcpServerTransport.hpp
common/src/helpers/: CommonTypes.cpp
common/src/protocol/: ProtobufClientProtocol.cpp
common/src/transport/: TcpClientTransport.cpp
server/: CMakeLists.txt  Client.cpp  Client.hpp  IClient.hpp  IListener.hpp  Listener.cpp  Listener.hpp  Server.cpp  Server.hpp  main.cpp
